# wowedit

./: Cargo.toml  LICENSE
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  main.rs  wgpu_state.rs
crates/formats/: Cargo.toml
crates/formats/src/: chunks.rs  io.rs  lib.rs  loader.rs  version.rs
crates/formats/src/adt/: mcal.rs  mcly.rs  mcnk.rs  mddf.rs  mod.rs  mtex.rs
crates/formats/src/blp/: mod.rs
crates/formats/src/m2/: m2_model.rs  m2_resolved_mesh.rs  m2_skin.rs  m2_texture.rs  m2_vertex.rs  mod.rs
crates/formats/src/mpq/: archive.rs
crates/formats/src/storage/: filesystem.rs  mod.rs  mpq.rs
crates/formats/src/wmo/: mod.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: gpu_camera.rs  lib.rs  terrain_alpha.rs  terrain_mesh.rs  terrain_pipeline.rs  terrain_renderer.rs  texture_manager.rs  vertex.rs
crates/renderer/src/m2/: m2_instance_buffer.rs  m2_mesh.rs  m2_pipeline.rs  m2_renderer.rs  m2_vertex.rs  mod.rs
crates/renderer/src/mesh/: gpu_mesh.rs  mod.rs
crates/renderer/src/shaders/: m2.wgsl  terrain.wgsl  terrain_mipmap.wgsl
crates/renderer/src/terrain/: mod.rs  terrain_alpha.rs  terrain_mesh.rs  terrain_mipmap.rs  terrain_pipeline.rs  terrain_renderer.rs  terrain_textures.rs
crates/scene/: Cargo.toml
crates/scene/src/: camera.rs  terrain.rs
src/: app.rs  camera.rs  camera_controller.rs  instance.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
