[workspace]
members = ["crates/app", "crates/renderer", "crates/scene", "crates/formats"]
resolver = "3"

[workspace.dependencies]
wgpu = "29"
winit = "0.30"
glam = "0.33"
bytemuck = { version = "1", features = ["derive"] }
byteorder = "1"
anyhow = "1.0.102"
wow-mpq = "0.6.4"
pollster = "0.4.0"
env_logger = "0.11.10"
log = "0.4.32"
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
wow-blp = "0.6.4"
