[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { workspace = true }
renderer = { path = "../renderer" }
scene = { path = "../scene" }
formats = { path = "../formats" }
anyhow = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }
wgpu = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
